# Taste

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: CONCEPT.md  DESIGN.md  ROADMAP.md
examples/: README.md
src/taste/: __init__.py  __main__.py  cli.py  config.py
src/taste/analysis/: aggregator.py  career.py  dimensions.py  paper_analyzer.py
src/taste/data/: cache.py  fetcher.py  models.py  selector.py  semantic_scholar.py
src/taste/llm/: backend.py  claude.py  prompts.py
src/taste/output/: markdown.py  terminal.py
tests/: test_selector.py
