[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taste"
version = "0.1.0"
description = "Paper is cheap, show me the taste."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "draccus>=0.9.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "anthropic>=0.40",
    "jinja2>=3.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
scholar = ["scholarly>=1.7"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]
all = ["taste[openai,scholar,dev]"]

[project.scripts]
taste = "taste.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
